final changes before submission

--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-      <!--Beginning of our container-->
-    <div class="container">
-        <h2>Password Generator</h2>
-        <div class="result-container">
-            <span id="result"></span>
-            <button class="btn" id="clipboard">
-                <i class="far fa-clipboard"></i>
-            </button>
-        </div>
-        <div class="settings">
-            <div class="setting">
-                <label>Password length</label>
-                <input type="number" id="length" min='8' max='128' value='8' />
-            </div>
-            <!--Checkbox criteria-->
-            <div class="setting">
-                <label>Include uppercase letters</label> 
-                <input type="checkbox" id="uppercase" checked />
-            </div>
-            <div class="setting">
-                <label>Include lowercase letters</label> 
-                <input type="checkbox" id="lowercase" checked />
-            </div>
-            <div class="setting">
-                <label>Include numbers</label> 
-                <input type="checkbox" id="numbers" checked />
-            </div>
-            <div class="setting">
-                <label>Include symbols</label> 
-                <input type="checkbox" id="symbols" checked />
-            </div>
-        </div>
-        <!--Generate Button-->
-        <button class="btn btn-large" id="generate">
-            Generate A password
-        </button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Random Password Generator</title>
+    <!--Bootstrap CDN and Reference to CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="bg-light">
+<div class="row py-3">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h1 class="text-center display-4 text-dark">Password Generator</h1>
     </div>
+</div>
+
+<main>
+    <div class="container main-content pt-5 px-4">
+        <div class="row pd-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2 class="text-center text-dark">Generate a random password</h2>
+            </div>
+        </div>
+        <div class="row py-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <form class="py-3">
+                <div class="form-group">
+                    <textarea id="passTextBox" class="form-control" placeholder="Your Secure Password"></textarea>
+                </div>
+            </form>
+<!--Button-->
+    <div class="row py-4">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
+            <button type="submit" id="generateBtn" class="btn btn-danger px-5">Generate Password</button>
+        </div>
+
+</main>   
+<!--Javascript-->
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
